1) Change evaluation decimal point. 2) Add ablation study. 3) Save splited data, so retrain model using same dataset. 4) Add collision heatmap.

--- a/weather_cnn.ipynb
+++ b/weather_cnn.ipynb
@@ -103,6 +103,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddedf79b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ablation study options: set these before running training\n",
+    "# Remove features by listing their names in ablation_features\n",
+    "# Options: 'cloud_coverage', 'sun_obscuration_percentage', 'irradiance', 'time'\n",
+    "# To remove images, set ablation_no_image = True\n",
+    "ablation_features = []  # e.g., ['cloud_coverage', 'irradiance', 'time']\n",
+    "ablation_no_image = False  # Set True to train without images"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "0dc545b9",
    "metadata": {},
@@ -117,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fe625fea",
    "metadata": {},
    "outputs": [
@@ -176,7 +191,9 @@
     "    image_dir=base_dir,\n",
     "    image_size=img_size,\n",
     "    use_features=True,\n",
-    "    n_clusters=n_clusters\n",
+    "    n_clusters=n_clusters,\n",
+    "    ablation_features=ablation_features,\n",
+    "    ablation_no_image=ablation_no_image\n",
     ")\n",
     "print(\"[Step 1] Done loading weather dataset.\")\n",
     "\n",
@@ -370,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "a1d32433",
    "metadata": {},
    "outputs": [
@@ -474,14 +491,14 @@
     "\n",
     "# Evaluate and save\n",
     "val_loss, val_acc = model.evaluate([X_val_images, X_val_features], Y_val)\n",
-    "print(f\"Validation Accuracy: {val_acc:.2%}\")\n",
+    "print(f\"Validation Accuracy: {val_acc*100:.4f}%\")\n",
     "model.save(os.path.join(checkpoint_dir, \"weather_cnn_model3.h5\"))\n",
     "model.save(os.path.join(checkpoint_dir, \"weather_cnn_model3.keras\"))\n",
     "print(f\"Model saved to {os.path.join(checkpoint_dir, 'weather_cnn_model3.h5')}\")\n",
     "\n",
     "# Final test evaluation\n",
     "test_loss, test_acc = model.evaluate([X_test_images, X_test_features], Y_test)\n",
-    "print(f\"Test Accuracy: {test_acc:.2%}\")\n",
+    "print(f\"Test Accuracy: {test_acc*100:.4f}%\")\n",
     "print(f\"Test Loss: {test_loss:.4f}\")\n",
     "\n",
     "# Test set classification report\n",
@@ -495,10 +512,10 @@
     "recall = recall_score(y_test_true_classes, y_test_pred_classes, average='weighted', zero_division=0)\n",
     "f1 = f1_score(y_test_true_classes, y_test_pred_classes, average='weighted', zero_division=0)\n",
     "\n",
-    "print(f\"Accuracy: {accuracy:.2%}\")\n",
-    "print(f\"Precision: {precision:.2%}\")\n",
-    "print(f\"Recall: {recall:.2%}\")\n",
-    "print(f\"F1-score: {f1:.2%}\")\n",
+    "print(f\"Accuracy: {accuracy*100:.4f}%\")\n",
+    "print(f\"Precision: {precision*100:.4f}%\")\n",
+    "print(f\"Recall: {recall*100:.4f}%\")\n",
+    "print(f\"F1-score: {f1*100:.4f}%\")\n",
     "\n",
     "print(classification_report(y_test_true_classes, y_test_pred_classes, target_names=[str(c) for c in range(n_clusters)], zero_division=0))\n",
     "\n",
@@ -509,6 +526,19 @@
     "plt.xlabel(\"Predicted\")\n",
     "plt.ylabel(\"True\")\n",
     "plt.title(\"Test Set Confusion Matrix\")\n",
+    "plt.show()\n",
+    "\n",
+    "# Plot collision heatmap (misclassification matrix)\n",
+    "collision_matrix = np.zeros_like(cm)\n",
+    "for i in range(n_clusters):\n",
+    "    for j in range(n_clusters):\n",
+    "        if i != j:\n",
+    "            collision_matrix[i, j] = cm[i, j]\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.heatmap(collision_matrix, annot=True, fmt='d', cmap='Reds', xticklabels=range(n_clusters), yticklabels=range(n_clusters))\n",
+    "plt.xlabel(\"Predicted\")\n",
+    "plt.ylabel(\"True\")\n",
+    "plt.title(\"Collision Heatmap (Misclassifications)\")\n",
     "plt.show()\n",
     "\n",
     "# Show example errors (misclassified images) from test set\n",
