--- a/weather_cnn_collab.ipynb
+++ b/weather_cnn_collab.ipynb
@@ -339,7 +339,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
+   "id": "28dbde2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ablation study options: set these before running training\n",
+    "# Remove features by listing their names in ablation_features\n",
+    "# Options: 'cloud_coverage', 'sun_obscuration_percentage', 'irradiance', 'time'\n",
+    "# To remove images, set ablation_no_image = True\n",
+    "ablation_features = []  # e.g., ['cloud_coverage', 'irradiance', 'time']\n",
+    "ablation_no_image = False  # Set True to train without images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "455ef59e",
    "metadata": {
     "colab": {
@@ -404,6 +419,30 @@
     "    features = parsed['features']\n",
     "    label = parsed['label']\n",
     "\n",
+    "    # --- Ablation logic ---\n",
+    "    # Feature order: ['cloud_coverage', 'sun_obscuration_percentage', 'irradiance', 'time']\n",
+    "    feature_map = {\n",
+    "        'cloud_coverage': 0,\n",
+    "        'sun_obscuration_percentage': 1,\n",
+    "        'irradiance': 2,\n",
+    "        'hour_sin': 3,\n",
+    "        'hour_cos': 4,\n",
+    "        'month_sin': 5,\n",
+    "        'month_cos': 6\n",
+    "    }\n",
+    "    # Expand 'time' to indices for ablation\n",
+    "    ablation_indices = set()\n",
+    "    if 'ablation_features' in globals() and ablation_features:\n",
+    "        for feature in ablation_features:\n",
+    "            if feature == 'time':\n",
+    "                ablation_indices.update([feature_map['hour_sin'], feature_map['hour_cos'], feature_map['month_sin'], feature_map['month_cos']])\n",
+    "            elif feature in feature_map:\n",
+    "                ablation_indices.add(feature_map[feature])\n",
+    "        keep_indices = [i for i in range(len(feature_map)) if i not in ablation_indices]\n",
+    "        features = tf.gather(features, keep_indices)\n",
+    "    if 'ablation_no_image' in globals() and ablation_no_image:\n",
+    "        image = tf.zeros([img_size, img_size, num_channels], dtype=tf.float32)\n",
+    "\n",
     "    return (image, features), label\n",
     "\n",
     "def get_dataset(tfrecord_path, batch_size):\n",
@@ -419,31 +458,6 @@
     "test_dataset  = get_dataset(test_tfrecord, batch_size)\n",
     "\n",
     "print(\"Datasets ready ✅\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "ddedf79b",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-08-23T20:27:19.618937Z",
-     "iopub.status.busy": "2025-08-23T20:27:19.618645Z",
-     "iopub.status.idle": "2025-08-23T20:27:19.622785Z",
-     "shell.execute_reply": "2025-08-23T20:27:19.621969Z",
-     "shell.execute_reply.started": "2025-08-23T20:27:19.618917Z"
-    },
-    "id": "ddedf79b",
-    "trusted": true
-   },
-   "outputs": [],
-   "source": [
-    "# Ablation study options: set these before running training\n",
-    "# Remove features by listing their names in ablation_features\n",
-    "# Options: 'cloud_coverage', 'sun_obscuration_percentage', 'irradiance', 'time'\n",
-    "# To remove images, set ablation_no_image = True\n",
-    "ablation_features = []  # e.g., ['cloud_coverage', 'irradiance', 'time']\n",
-    "ablation_no_image = False  # Set True to train without images"
    ]
   },
   {
