--- a/weather_dataset.ipynb
+++ b/weather_dataset.ipynb
@@ -65,6 +65,117 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d8a56ced",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Silhouette Score for 4 clusters: 0.5141\n",
+      "Silhouette Score for 5 clusters: 0.5025\n",
+      "Silhouette Score for 6 clusters: 0.4989\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Clustering and Silhouette Score Evaluation ---\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.metrics import silhouette_score\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Example: Load your weather data into a DataFrame\n",
+    "df = pd.DataFrame(weather_data)  # weather_data should be a list of dicts with features\n",
+    "features = ['cloud_coverage', 'sun_obscuration_percentage', 'irradiance']\n",
+    "X = df[features]\n",
+    "\n",
+    "# Standardize features\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# Perform K-means clustering\n",
+    "n_clusters = 4  # Change as needed\n",
+    "kmeans = KMeans(n_clusters=n_clusters, random_state=42, n_init=10)\n",
+    "cluster_labels = kmeans.fit_predict(X_scaled)\n",
+    "df['cluster'] = cluster_labels\n",
+    "\n",
+    "# Evaluate clustering with Silhouette Score\n",
+    "score = silhouette_score(X_scaled, cluster_labels)\n",
+    "print(f\"Silhouette Score for {n_clusters} clusters: {score:.4f}\")\n",
+    "\n",
+    "# Perform K-means clustering\n",
+    "n_clusters = 5  # Change as needed\n",
+    "kmeans = KMeans(n_clusters=n_clusters, random_state=42, n_init=10)\n",
+    "cluster_labels = kmeans.fit_predict(X_scaled)\n",
+    "df['cluster'] = cluster_labels\n",
+    "\n",
+    "# Evaluate clustering with Silhouette Score\n",
+    "score = silhouette_score(X_scaled, cluster_labels)\n",
+    "print(f\"Silhouette Score for {n_clusters} clusters: {score:.4f}\")\n",
+    "\n",
+    "# Perform K-means clustering\n",
+    "n_clusters = 6  # Change as needed\n",
+    "kmeans = KMeans(n_clusters=n_clusters, random_state=42, n_init=10)\n",
+    "cluster_labels = kmeans.fit_predict(X_scaled)\n",
+    "df['cluster'] = cluster_labels\n",
+    "\n",
+    "# Evaluate clustering with Silhouette Score\n",
+    "score = silhouette_score(X_scaled, cluster_labels)\n",
+    "print(f\"Silhouette Score for {n_clusters} clusters: {score:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2e911b19",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 80 JSON files\n",
+      "Loaded 93988 weather data entries.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Load Weather Data for Clustering ---\n",
+    "import glob\n",
+    "import json\n",
+    "\n",
+    "weather_data = []\n",
+    "json_dir = r\"D:\\Image\\test_result\\json\"  # Update this path if needed\n",
+    "json_files = glob.glob(json_dir + \"/**/*.json\", recursive=True)\n",
+    "print(f\"Found {len(json_files)} JSON files\")\n",
+    "\n",
+    "for json_file in json_files:\n",
+    "    try:\n",
+    "        with open(json_file, 'r', encoding='utf-8') as f:\n",
+    "            for line in f:\n",
+    "                if line.strip():\n",
+    "                    try:\n",
+    "                        entry = json.loads(line)\n",
+    "                        # Only add if required fields exist\n",
+    "                        if entry.get('cloud_coverage') is not None:\n",
+    "                            weather_data.append({\n",
+    "                                'cloud_coverage': entry.get('cloud_coverage', 0.0),\n",
+    "                                'sun_obscuration_percentage': entry.get('sun_obscuration_percentage', 0.0),\n",
+    "                                'irradiance': entry.get('irradiance', 0.0),\n",
+    "                                'timestamp': entry.get('now', '')\n",
+    "                            })\n",
+    "                    except json.JSONDecodeError:\n",
+    "                        continue\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error reading {json_file}: {e}\")\n",
+    "\n",
+    "print(f\"Loaded {len(weather_data)} weather data entries.\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9ecf3101",
    "metadata": {},
